# DjangoProject

./: .env.sample  .gitignore  README.md  library_fixture.jsom  pyproject.toml  requirements.txt
blogs/: admin.py  forms.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_blogspost_delete_blogpost.py
blogs/templates/blogs/: base.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
catalog/fixtures/: categories.json  products.json
catalog/management/commands/: add_test_products.py
catalog/migrations/: 0001_initial.py
catalog/templates/: validators.py
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
config/: settings.py  urls.py
products/: admin.py  models.py  urls.py  views.py
products/management/commands/: fill_products.py
products/migrations/: 0001_initial.py
products/templates/products/: base.html  header.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  products_list.html
static/js/: bootstrap.bundle.js  bootstrap.esm.js  bootstrap.js
students/: admin.py  forms.py  models.py  urls.py  views.py
students/management/commands/: add_students.py
students/migrations/: 0001_initial.py  0002_mymodel.py
students/templates/students/: about.html  contact.html  header.html  home.html  index.html  mymodel_confirm_delete.html  mymodel_detail.html  mymodel_form.html  (+4 more)
users/: forms.py  urls.py
(+6 files in other folders)
